--- a/predictor/templates/predictor/predict.html
+++ b/predictor/templates/predictor/predict.html
@@ -15,7 +15,7 @@
     <article>
 
         <section>
-            <form action="http://127.0.0.1:8000/predict" method="POST">
+            <form action="{% url 'predict'%}" method="POST">
 
                 {% csrf_token %}
 
@@ -23,7 +23,7 @@
                     {{form.as_p }}
                 </ul>
                 <div id="predict">
-                    <button>Register</button>
+                    <button>Submit</button>
                 </div>
             </form>
         </section>
