--- a/predictor/templates/index.html
+++ b/predictor/templates/index.html
@@ -1,22 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html"%}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart Disease Detector APP</title>
-</head>
+{% block content%}
+<p>
+    This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
+</p>
 
-<body>
-    <p>
-        This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
-    </p>
+<a href="{% url 'predict'%}">
+    Form Link
+</a>
 
-    <a href="{% url 'predict'%}">
-        Form Link
-    </a>
-
-</body>
-
-</html>
+{%endblock content%}
