--- a/predictor/templates/base.html
+++ b/predictor/templates/base.html
@@ -20,29 +20,16 @@
 </head>
 
 <body>
-    <header class="site-header">
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-            <div class="container">
-                <a class="navbar-brand mr-4" href="/">Django Blog</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
-                    aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="/">Home</a>
-                        <a class="nav-item nav-link" href="/about">About</a>
-                    </div>
-                    <!-- Navbar Right Side -->
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Login</a>
-                        <a class="nav-item nav-link" href="#">Register</a>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12" ml-auto>
+                <div class="alert alert-primary" role="alert">
+                    Nav
                 </div>
             </div>
-        </nav>
-    </header>
-    <main role="main" class="container">
+        </div>
+    </div>
+    <div role="div" class="container">
         <div class="row">
             <div class="col-md-8">
                 {% block content %}{% endblock %}
@@ -61,7 +48,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 
 
 
