moved some tmeplates and views to aboutme app

--- a/aboutme/templates/base.html
+++ b/aboutme/templates/base.html
@@ -25,14 +25,14 @@
 <body>
 
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 Nav
             </a>
         </div>
     </div>
 
-    <div role="div" class="container">
+    <div role="div" class="container-fluid">
         <div class="row">
             <div class="col-md-8">
                 <div class="alert alert-secondary" role="alert">
