--- a/aboutme/templates/index.html
+++ b/aboutme/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 
 {% block content%}
-<div class="container">
+<div class="container-fluid">
 
     This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
 
@@ -13,14 +13,14 @@
 </a>
 
 
-<div class="container">
-    <img class="img-fluid mb-3 mb-md-0" src="predictor/laptop.jpg" alt="" width="520" height="400">
+<div class="container-fluid">
+    <img class="img-fluid mb-3 mb-md-0" src="static/predictor/laptop.jpg" alt="" width="520" height="400">
 </div>
 
 <nav class="navbar navbar-expand-lg alert alert-sencondary">
-    <div class="container">
-        <a href="{% url 'predict'%}">
-            Form Link
+    <div class="container-fluid">
+        <a href="{% url 'aboutme'%}">
+            About me page
         </a>
     </div>
 </nav>
