Added some styling using bootstrap

--- a/aboutme/templates/about_me.html
+++ b/aboutme/templates/about_me.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 
 {% block content%}
-<div class="container-fluid">
+<div class="container">
 
     This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
 
