--- a/aboutme/templates/base.html
+++ b/aboutme/templates/base.html
@@ -24,28 +24,35 @@
 
 <body>
 
-    <div class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                Nav
-            </a>
-        </div>
-    </div>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-md navbar-light pt-5 pb-4">
+    <div class="container bg-success">
+      <!-- navbar brand / title -->
+      <a class="navbar-brand" href="#intro">
+        <span class="text-white">
+          Heart Disease Detector App
+        </span>
+      </a>
+      <!-- toggle button for mobile nav -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div role="div" class="container-fluid">
-        <div class="row">
-            <div class="col-md-8">
-                <div class="alert alert-secondary" role="alert">
-                    {% block content %}{% endblock %}
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="content-section">
-                    <img src="" alt="" class="navbar-nav">
-                </div>
-            </div>
-        </div>
+      <!-- navbar links -->
+      <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'index'%}">home </a>
+          </li>
+          <li class="nav-item">
+                <a  class="nav-link" href="{% url 'aboutme'%}">About me</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
+
+      {% block content %}{% endblock %}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
