--- a/aboutme/templates/index.html
+++ b/aboutme/templates/index.html
@@ -1,29 +1,18 @@
 {% extends "base.html"%}
 
 {% block content%}
-<div class="container-fluid">
+<div class="container">
 
-    This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
-
+    <p>
+        This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
+    </p>
+    <a href="{% url 'predict'%}"> Form Link</a>
 </div>
 
 
-<a href="{% url 'predict'%}">
-    Form Link
-</a>
 
-
-<div class="container-fluid">
-    <img class="img-fluid mb-3 mb-md-0" src="static/predictor/laptop.jpg" alt="" width="520" height="400">
+<div class="container">
+    <img class="img-fluid w-50" src="static/predictor/heart.jpg">
 </div>
-
-<nav class="navbar navbar-expand-lg alert alert-sencondary">
-    <div class="container-fluid">
-        <a href="{% url 'aboutme'%}">
-            About me page
-        </a>
-    </div>
-</nav>
-
 
 {%endblock content%}
