--- a/predictor/templates/predictor/predict.html
+++ b/predictor/templates/predictor/predict.html
@@ -1,16 +1,30 @@
 {% extends 'base.html'%}
 
 {% block content%}
-<form action="{% url 'predict'%}" method="POST">
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="alert alert-secondary" role="alert">
+                <form action="{% url 'predict'%}" method="POST">
 
-    {% csrf_token %}
-
-    <ul>
-        {{form.as_p }}
-    </ul>
-    <div id="predict">
-        <button>Submit</button>
+                    {% csrf_token %}
+                    <ul>
+                        {{form.as_p }}
+                    </ul>
+                    <div id="predict">
+                        <button>Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="col">
+            <img class="img-fluid w-25" src="static/predictor/heart.jpg" alt="Heart image" class="navbar-nav">
+        </div>
     </div>
-</form>
+</div>
 
+
+<div class="content-section">
+    
+</div>
 {% endblock%}
