--- a/aboutme/templates/about_me.html
+++ b/aboutme/templates/about_me.html
@@ -1,15 +1,26 @@
-{% extends "base.html"%}
-
-{% block content%}
-<div class="container">
-
-    This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
-
-</div>
-
-
-<a href="{% url 'predict'%}">
-    Form Link
-</a>
-
+{% extends "base.html"%} {% block content%}
+<h2>About Markos</h2>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat odio eaque
+  facere autem iste atque esse maxime adipisci fugit, sapiente molestias quae
+  voluptas? Vero similique quae velit neque, ex ratione, quos et a illo
+  dignissimos possimus voluptatem eligendi! Sit debitis officia dolore dolores.
+  Quod error recusandae labore minima maxime ullam nemo officia ab aliquid
+  architecto suscipit dolorum perspiciatis, laudantium, veniam cum esse impedit
+  sequi quia animi atque quam consectetur ratione molestias? Voluptatibus
+  quaerat laborum perferendis atque neque tempore, dolorem eaque quia nisi
+  inventore provident corporis asperiores. Id, officiis harum odit incidunt
+  delectus fuga non obcaecati dignissimos quo quam veritatis sint quaerat
+  voluptas vel quisquam atque, necessitatibus laborum voluptatibus aperiam
+  libero totam? Molestias libero, nemo architecto sunt beatae doloremque, ullam
+  ipsum asperiores nesciunt accusantium hic, eaque debitis explicabo obcaecati.
+  Esse eum molestiae dolores ipsum eaque excepturi necessitatibus aliquam.
+  Cumque, maxime. Sunt numquam impedit aliquam. Quo facilis quaerat, tempora
+  magnam atque obcaecati neque nisi eos saepe dolor corporis? Veniam minima
+  atque possimus nesciunt dicta omnis aliquid perferendis reiciendis deleniti
+  consequatur ullam aliquam, in voluptatem eum recusandae magni! Architecto
+  error enim omnis quisquam repellat possimus deleniti dolorum vero quasi, modi
+  id, doloremque atque. Doloremque dolorem ducimus nulla laboriosam a, quo eum
+  ea veritatis!
+</p>
 {%endblock content%}
