--- a/aboutme/templates/index.html
+++ b/aboutme/templates/index.html
@@ -1,18 +1,8 @@
-{% extends "base.html"%}
-
-{% block content%}
-<div class="container">
-
-    <p>
-        This app Detects your heart disease if you give it the apropriate information in the form at the follwing link.
-    </p>
-    <a href="{% url 'predict'%}"> Form Link</a>
-</div>
-
-
+{% extends "base.html"%} {% block content%}
+<div class="container"></div>
 
 <div class="container">
-    <img class="img-fluid w-50" src="static/predictor/heart.jpg">
+  <img class="img-fluid w-50" src="static/predictor/heart.jpg" />
 </div>
 
 {%endblock content%}
