--- a/predictor/templates/predictor/predict.html
+++ b/predictor/templates/predictor/predict.html
@@ -1,7 +1,9 @@
-{% extends 'base.html'%}
 
+{% extends "index.html"%}
+{% load static%}
 {% block content%}
-<div class="container">
+
+<div class="contnainer">
     <div class="row">
         <div class="col">
             <div class="alert alert-secondary" role="alert">
@@ -25,6 +27,7 @@
 
 
 <div class="content-section">
-    
+
 </div>
-{% endblock%}
+
+{% endblock content%}
