--- a/aboutme/templates/index.html
+++ b/aboutme/templates/index.html
@@ -1,8 +1,247 @@
-{% extends "base.html"%} {% block content%}
-<div class="container"></div>
+{% load static%}
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container">
-  <img class="img-fluid w-50" src="static/predictor/heart.jpg" />
-</div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-utilities.min.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.css' %}">
+</head>
 
-{%endblock content%}
+<body>
+
+  <nav class="fixed-top nav collapsible">
+    <a class="nav__brand" href="#"><img src="{% static 'image/logo1.png' %}" alt="" /></a>
+    <svg class="icon icon--white nav__toggler">
+      <use xlink:href="image/sprite.svg#menu"></use>
+    </svg>
+    <ul class="list nav__list collapsible__content">
+      <li class="nav__item"><a href="{% url 'index'%}">Home</a></li>
+      <li class="nav__item"><a href="{% url 'predict'%}">GET STARTED</a></li>
+      <li class="nav__item"><a href="{% url 'aboutme'%}">About</a></li>
+      <li class="nav__item"><a href="#">Markos </a></li>
+
+    </ul>
+  </nav>
+  {% block content%}
+  <header>
+    <h1 class="heading1">ARTIFICIAL INTELLIGENCE IDENTIFIES <br> INDIVIDUALS AT RISK FOR HEART DISEASE <br>
+      COMPLICATIONS</h1>
+    <p class="paragraph">Cardiovascular diseases (CVD) is a major threat to human health and the leading cause of death
+      worldwide. The incidence of CVD caused 17.6 million deaths in 2016, an increase of 14.5% from 2006 to 2016.
+      Unfortunately, the mortality and morbidity rates of CVD are increasing year by year, especially in developing
+      regions. Studies have shown that approximately 80% of CVD-related deaths occur in low- and middle-income
+      countries. Besides, these deaths occur at a younger age than in high-income countries.</p>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="{% static 'image/image.jpeg' %}" class="cover_img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>HEART DISEASE</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="cover_img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="cover_img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="card testimonial">
+      <div class="grid grid--1x2">
+        <div class="testimonial__image">
+          <img src="{% static 'image/Screenshot from 2022-02-07 14-39-00.png' %}" alt="A happy, smiling customer" />
+        </div>
+        <div>
+
+          <h2 class="testimo">Frequently ask</h2>
+          <li class="asked">Helping people who have had a stroke</li>
+          <li class="asked">Preventing heart problems</li>
+          <li class="asked">Detecting atrial fibrillation (a-fib) sooner</li>
+        </div>
+
+
+        <footer>
+          <div class="media">
+            <div class="media__image">
+              <svg class="icon icon--primary quote__line">
+                <use xlink:href="images/sprite.svg#line"></use>
+              </svg>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
+    <section class="section">
+      <div class="container">
+
+        <div class="section_header">
+          <h2 class="title section_title">Expert Team<span></span></h2>
+          <span class="section_hint">web design & Development</span>
+        </div>
+        <div class="row">
+          <div class="section_content teamy-team">
+            <div class="col-md-3">
+              <div class="teamy teamy_style1 teamy_mask-circle">
+                <div class="teamy_layout">
+                  <div class="teamy_preview"> <img src="{% static 'image/re.png' %}" class="teamy_avatar"
+                      alt="The demo photo"> </div>
+                  <div class="teamy_back">
+                    <div class="teamy_back-inner"> <a href="#0" class="social"> <i class="fa fa-facebook"></i> </a> <a
+                        href="#0" class="social"> <i class="fa fa-dribbble"></i> </a> <a href="#0" class="social"> <i
+                          class="fa fa-twitter"></i> </a> <a href="#0" class="social"> <i class="fa fa-envelope-o"></i>
+                      </a> </div>
+                  </div>
+                </div>
+                <div class="teamy_content">
+                  <h3 class="teamy_name">Markos Amsalu</h3>
+                  <span class="teamy_post">CEO/Founder</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="teamy teamy_style1 teamy_mask-circle">
+                <div class="teamy_layout">
+                  <div class="teamy_preview"> <img src="{% static 'image/re.png' %}" alt="The demo photo">
+
+                  </div>
+                  <div class="teamy_back">
+                    <div class="teamy_back-inner"> <a href="#0" class="social"> <i class="fa fa-facebook"></i> </a> <a
+                        href="#0" class="social"> <i class="fa fa-dribbble"></i> </a> <a href="#0" class="social"> <i
+                          class="fa fa-twitter"></i> </a> <a href="#0" class="social"> <i class="fa fa-envelope-o"></i>
+                      </a> </div>
+                  </div>
+                </div>
+                <div class="teamy_content">
+                  <h3 class="teamy_name">Dora Caelan</h3>
+                  <span class="teamy_post">Product Manager</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="teamy teamy_style1 teamy_mask-circle">
+                <div class="teamy_layout">
+                  <div class="teamy_preview"> <img src="{% static 'image/re.png' %}" class="teamy_avatar"
+                      alt="The demo photo"> </div>
+                  <div class="teamy_back">
+                    <div class="teamy_back-inner"> <a href="#0" class="social"> <i class="fa fa-facebook"></i> </a> <a
+                        href="#0" class="social"> <i class="fa fa-dribbble"></i> </a> <a href="#0" class="social"> <i
+                          class="fa fa-twitter"></i> </a> <a href="#0" class="social"> <i class="fa fa-envelope-o"></i>
+                      </a> </div>
+                  </div>
+                </div>
+                <div class="teamy_content">
+                  <h3 class="teamy_name">Mesfin Gedlu</h3>
+                  <span class="teamy_post">Wordpress Manager</span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+      </div>
+      </div>
+    </section>
+  </header>
+  {% endblock content%}
+  <footer>
+
+    <body>
+
+      <footer class="block block--dark footer">
+        <div class="container grid footer__sections">
+          <section class="collapsible collapsible--expanded footer__section">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading footer__heading">Products</h2>
+              <svg class="icon icon--white collapsible__chevron">
+                <use xlink:href="images/sprite.svg#chevron"></use>
+              </svg>
+            </header>
+            <div class="collapsible__content">
+              <ul class="list">
+                <li><a href="#">Website Hosting</a></li>
+                <li><a href="#">Free Automated Wordpress</a></li>
+                <li><a href="#">Migrations</a></li>
+              </ul>
+            </div>
+          </section>
+          <section class="collapsible footer__section">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading footer__heading">Company</h2>
+              <svg class="icon icon--white collapsible__chevron">
+                <use xlink:href="images/sprite.svg#chevron"></use>
+              </svg>
+            </header>
+            <div class="collapsible__content">
+              <ul class="list">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Affiliates</a></li>
+                <li><a href="#">Blog</a></li>
+              </ul>
+            </div>
+          </section>
+          <section class="collapsible footer__section">
+            <header class="collapsible__header">
+              <h2 class="collapsible__heading footer__heading">Support</h2>
+              <svg class="icon icon--white collapsible__chevron">
+                <use xlink:href="images/sprite.svg#chevron"></use>
+              </svg>
+            </header>
+            <div class="collapsible__content">
+              <ul class="list">
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Knowledge Base</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </div>
+          </section>
+
+          <section class="footer__brand">
+            <img class="heart_logo" src="{% static 'image/logo1.png' %}" alt="" />
+            <p class="footer__copyright">All rights reserved 2022 <br> Markos Amsalu</p>
+
+          </section>
+        </div>
+      </footer>
+    </body>
+    <div class="contact">
+
+    </div>
+  </footer>
+  <script src="{% static 'main.js' %}"></script>
+</body>
+
+</html>
