--- a/aboutme/templates/index.html
+++ b/aboutme/templates/index.html
@@ -27,6 +27,7 @@
 
     </ul>
   </nav>
+  <div class="container" style="margin-top: 100px;"">
   {% block content%}
   <header>
     <h1 class="heading1">ARTIFICIAL INTELLIGENCE IDENTIFIES <br> INDIVIDUALS AT RISK FOR HEART DISEASE <br>
@@ -177,6 +178,7 @@
     </section>
   </header>
   {% endblock content%}
+</div>
   <footer>
 
     <body>
