heart image on predict html shown

--- a/predictor/templates/predictor/predict.html
+++ b/predictor/templates/predictor/predict.html
@@ -20,8 +20,9 @@
                 </form>
             </div>
         </div>
+        
         <div class="col">
-            <img class="img-fluid w-25" src="static/predictor/heart.jpg" alt="Heart image" class="navbar-nav">
+            <img class="img-fluid w-150" src= {% static "predictor/heart.jpg" %}  alt="Heart image" class="navbar-nav">
         </div>
     </div>
 </div>
