--- a/predictor/templates/predictor/result.html
+++ b/predictor/templates/predictor/result.html
@@ -1,6 +1,9 @@
-{% extends "base.html"%}
 
+{% extends "index.html"%}
+{% load static%}
+{% load crispy_forms_tags %}
 {% block content%}
+
 
 {% if 1 in result %}
 <h1>
